[package]
name = "connection-tcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hub"
path = "src/bin/hub.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"