[package]
name = "mandelbrot-dist"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hub"
path = "src/bin/hub/main.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
image = "0.25"
